--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 Számolja ki egyszerűen és gyorsan a különböző matematikai és programozási problémák eredményeit.</h2>
             <ul>
                 <li><a href="calculate.html">Értékelési kalkulátor</a> - Könnyedén használható kalkulátor értékelési számolásokhoz. (Időszaki Zárókészlet, Időszaki Átlagár, Időszaki Zárókészlet értéke)</li>
+                <li><a href="costs.html">Vállalkozási számolások</a></li>
             </ul>
         </div> 
  
