--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h2>Ezen az oldalon különböző algoritmusokhoz készített kalkulátorokat talál. 
                 Számolja ki egyszerűen és gyorsan a különböző matematikai és programozási problémák eredményeit.</h2>
             <ul>
-                <li><a href="calculate.html">Értékelési kalkulátor</a> - Könnyedén használható kalkulátor értékelési számolásokhoz. (Időszaki Zárókészlet, Időszaki Átlagár, Időszaki Zárókészlet értéke)</li>
-                <li><a href="costs.html">Vállalkozási számolások</a></li>
+                <li><a href="calculate.html">Vállalati gazdaságtan alapjai számolások</a></li>
+                <li><a href="costs.html">Közgazdaságtan számolások</a></li>
             </ul>
         </div> 
  
