--- a/calculate.html
+++ b/calculate.html
@@ -29,7 +29,7 @@
 <body>
    
     <div id="snow-container" >
-        <h1>Ertekelesi Kalkulator nagyon egyszeru hasznalattal</h1>
+        <h1>Értékelési Kalkulátor nagyon egyszerű használattal</h1>
         <div class="task">
             <p>Átlagár módszer szakaszos értékelés esetén <b>(Ha csökkenést szeretnél hozzáadni, az egységár bármi lehet)</b></p>
     
