--- a/costs.html
+++ b/costs.html
@@ -47,9 +47,9 @@
 <body>
    
     <div id="snow-container" >
-        <h1>Koltseg Kalkulator nagyon egyszeru hasznalattal</h1>
+        <h1>Költség Kalkulátor nagyon egyszerű használattal</h1>
         <div class="task">
-            <p>Árbevétel</p>
+            <p>Elszámolhatóság szerinti költségek</p>
             <table>
               <tr>
                 <td id="ar" colspan="4"><input type="number" id="OsszKoltseg" placeholder="Árbevétel"></td>
@@ -84,7 +84,7 @@
            
         </div>
         <div class="task">
-            <p>Vállalkozás költségei</p>
+            <p>Rövid távú költségek</p>
             <table id="myTable">
                 <thead>
                   <tr>
