--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body>
    
     <div id="snow-container" >
-        <h1>Udvozoljuk az Algoritmus Kalkulatorok Weboldalan!</h1>
+        <h1>Üdvözöljük az Algoritmus Kalkulátorok Weboldalán!</h1>
         <div class="task">
             <h2>Ezen az oldalon különböző algoritmusokhoz készített kalkulátorokat talál. 
                 Számolja ki egyszerűen és gyorsan a különböző matematikai és programozási problémák eredményeit.</h2>
